# MatcH_code

./: CMakeLists.txt  D_ICPC.cpp  README.md
.cph/: .550897A.cpp_46a2d57679127dc525d170a4ea26dbe3.prob  .550897B.cpp_750600fb852f872b9571d1281af1c34f.prob  .550897C.cpp_19d01886abd50d7d1f42d1e186acb8ad.prob  .550897D.cpp_e479414803347013b6c8dbbc53fd11c8.prob  .A_Past_ABCs.cpp_cf0a7dd03f500c05f71d835eeef68ecc.prob  .A_Too_Min_Too_Max.cpp_d4571ac68987517607511b66d4361c0e.prob  .C_Sort.cpp_0f3da8bfada0b02a265d31c6b599d52a.prob  .D_ICPC.cpp_3758cf40897f91a7f748f4866ab15074.prob  .D_New_Friends.cpp_d6f48b2552e238f78ae51efe12dde911.prob  .E_Rudolf_and_k_Bridges.cpp_4a461039a29c5f7a046598decc41a84b.prob  .小红不想做完全背包_hard.cpp_4512755838df9de539926d3925bb1bac.prob
2023河南萌新联赛第（八）场：南阳理工学院/: F.cpp__tests  K.cpp  temp.cpp
2024/: CT.cpp  CT.cpp__tests  L2-3.cpp  Main.java  data.in  data.out  main.cpp  main.cpp__tests  main__Generator.cpp  main__Good.cpp  main__Good.cpp__tests  田地.cpp  田地.cpp__tests  田地.py
2024NowCoder/: 小红的子树乘积.cpp  小红的子树乘积.cpp__tests
23 Summer Friendship Tournament No.1/: A2.cpp  C.cpp
23 Summer Friendship Tournament No.4/: C.cpp__tests
AcWing/: Dijkstra求最短路_I.cpp  Dijkstra求最短路_I.cpp__tests  Trie字符串统计.cpp  YT.cpp  YT.cpp__tests  一个简单的整数问题.cpp  一个简单的整数问题.cpp__tests  一个简单的整数问题2.cpp  一个简单的整数问题2.cpp__tests  三元组.cpp__tests  回文子串的最大长度.cpp  回文子串的最大长度.cpp__tests  天才的记忆.cpp  最大数和最小数.cpp  最长上升子序列_II.cpp  最长上升子序列_II.cpp__tests  池塘计数.cpp  池塘计数.cpp__tests  热浪.cpp  热浪.cpp__tests  田地.cpp  验题.cpp  (+1 more)
Codeforces Round 786 (Div. 3)(vp)/: B.cpp  CMakeLists.txt  F.cpp
(+3770 files in other folders)
