cmake_minimum_required(VERSION 3.24)
project(Codeforces_Round_786__Div__3__vp_)

set(CMAKE_CXX_STANDARD 20)

add_executable(Codeforces_Round_786__Div__3__vp_ main.cpp)

add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(D D.cpp)
add_executable(E E.cpp)
add_executable(F F.cpp)